plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.6'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.seulmae'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
//	implementation 'io.jsonwebtoken:jjwt:0.9.1' // 자바 JWT 라이브러리
	implementation 'com.auth0:java-jwt:4.2.1'
	implementation 'javax.xml.bind:jaxb-api:2.3.1' // XML 문서와 Java 객체 간 매핑 자동화
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'net.nurigo:sdk:4.3.0'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	implementation group: 'org.apache.tika', name: 'tika-core', version: '2.7.0'

	implementation 'com.google.firebase:firebase-admin:9.2.0'

	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.2'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testCompileOnly 'org.projectlombok:lombok'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.2"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
